objects/Account.object
<CustomObject>
    <fields>
        <fullName>UPC_Type__c</fullName>
        <description>Field created by Nexell and used to identify the type of account.</description>
        <label>Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UPC_UID_Does_Not_Exist__c</fullName>
        <description>Yes if UID is empty. No if filled in.</description>
        <formula>IF(ISBLANK(UPC_UID__c),&apos;Yes&apos;,&apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UID Does Not Exist?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_UID_Status__c</fullName>
        <description>Field created by Nexell to store the UID Status.
UID Status is fulfilled by the Zefix Integration.</description>
        <label>UID Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Inactive</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UPC_UID__c</fullName>
        <description>Field created by Nexell and used to track the UID number.</description>
        <inlineHelpText>Please use this format: CHE-000.000.000</inlineHelpText>
        <label>UID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Zefix_Check_Context__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UPC Zefix Check Context</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_Zefix_Legal_Seat__c</fullName>
        <label>UPC Zefix Legal Seat</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Zefix_Not_Found__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Not Zefix registered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_Zefix_Share_Capital__c</fullName>
        <description>Created by Nexell. This field will be fuillfilled by Zefix Integration</description>
        <label>Zefix Share Capital</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UPC_Zefix_Status__c</fullName>
        <description>Field created by Nexell to store the Zefix Status</description>
        <label>Zefix Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>active</fullName>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>beingCancelled</fullName>
                    <label>Being Cancelled</label>
                </value>
                <value>
                    <fullName>cancelled</fullName>
                    <label>Cancelled</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UPC_Zefix_Verified__c</fullName>
        <formula>IF(CONTAINS($Profile.Name, &quot;Partner&quot;), 

IF(ISNULL( UPC_Last_Zefix_Update__c ),                                     IMAGE(&apos;/Partner/resource/1536830994000/Unavailable_Icon&apos;,&apos;Red&apos;,20,20),
IF(AND(NOT(ISNULL( UPC_Last_Zefix_Update__c )), UPC_Zefix_Not_Found__c ),
IMAGE(&apos;/Partner/resource/1536831026000/Alert_Icon&apos;,&apos;Alert&apos;,20,20),
IMAGE(&apos;/Partner/resource/1536830928000/Available_Icon&apos;,&apos;Green&apos;,20,20)
)),
IF(ISNULL( UPC_Last_Zefix_Update__c ),                                     IMAGE(&apos;/resource/1536830994000/Unavailable_Icon&apos;,&apos;Red&apos;,20,20),
IF(AND(NOT(ISNULL( UPC_Last_Zefix_Update__c )), UPC_Zefix_Not_Found__c ),
IMAGE(&apos;/resource/1536831026000/Alert_Icon&apos;,&apos;Alert&apos;,20,20),
IMAGE(&apos;/resource/1536830928000/Available_Icon&apos;,&apos;Green&apos;,20,20)
))
)</formula>
        <inlineHelpText>Red Icon means Zefix was not yet checked.
Orange Icon means Zefix was checked but did not find the Account.
Green Icon means Zefix was checked and updated the fields.</inlineHelpText>
        <label>Zefix Verified</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_co__c</fullName>
        <description>Field Created by Nexell to store the Address line 1 provided by Zefix.</description>
        <label>C/O</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_email__c</fullName>
        <description>Field created by Nexell and used to indicate account email.</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Voice_Systems_Detail__c</fullName>
        <label>Voice Systems Detail</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>UPC_Partner_Voice_Systems__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>3CX</fullName>
                </value>
                <value>
                    <fullName>Mitel</fullName>
                </value>
                <value>
                    <fullName>Alcatel-Lucent</fullName>
                </value>
                <value>
                    <fullName>AVAYA</fullName>
                </value>
                <value>
                    <fullName>Centile</fullName>
                </value>
                <value>
                    <fullName>Cisco</fullName>
                </value>
                <value>
                    <fullName>Innovaphone</fullName>
                </value>
                <value>
                    <fullName>Linksys Microsoft</fullName>
                </value>
                <value>
                    <fullName>Epygi</fullName>
                </value>
                <value>
                    <fullName>FOXFON</fullName>
                </value>
                <value>
                    <fullName>Gigaset</fullName>
                </value>
                <value>
                    <fullName>Hana</fullName>
                </value>
                <value>
                    <fullName>Nortel</fullName>
                </value>
                <value>
                    <fullName>Asteriks</fullName>
                </value>
                <value>
                    <fullName>Panasonic</fullName>
                </value>
                <value>
                    <fullName>Q-Company</fullName>
                </value>
                <value>
                    <fullName>Unify</fullName>
                </value>
                <value>
                    <fullName>Swyx</fullName>
                </value>
                <value>
                    <fullName>Starface</fullName>
                </value>
                <value>
                    <fullName>Samsung</fullName>
                </value>
                <value>
                    <fullName>Vertical</fullName>
                </value>
                <value>
                    <fullName>Skype for Business</fullName>
                </value>
                <value>
                    <fullName>AGFEO</fullName>
                </value>
                <value>
                    <fullName>TipTel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zefix_Not_Registered_Reason__c</fullName>
        <label>Zefix Not Registered Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>UPC_Zefix_Not_Found__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Private Account</fullName>
                </value>
                <value>
                    <fullName>No UID Registration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cscfga__Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cscfga__SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cscfga__SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csconta__Billing_Cycle__c</fullName>
        <label>Billing Cycle</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cscrm__External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>cspmb__Discount_Level__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Discount Level</label>
        <referenceTo>cspmb__Discount_Level__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>UPC_Type__c</columns>
        <columns>UPC_EHRA_ID__c</columns>
        <columns>UPC_CH_ID__c</columns>
        <columns>UPC_UID__c</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>All_Customer_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.UPC_Customer,Account.Partner_Customer_Account</value>
        </filters>
        <label>All Customer Accounts</label>
    </listViews>
    <listViews>
        <fullName>All_Partner_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>0121r000000if1q,Account.Partner_Customer_Account</value>
        </filters>
        <label>All Partner Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>My_Customer_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.UPC_Customer,Account.Partner_Customer_Account</value>
        </filters>
        <label>My Customer Accounts</label>
    </listViews>
    <listViews>
        <fullName>My_Partner_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>0121r000000if1q,Account.Partner_Customer_Account</value>
        </filters>
        <label>My Partner Accounts</label>
    </listViews>
    <recordTypes>
        <fullName>Customer_Account_Locked_by_Zefix_Frozen</fullName>
        <active>true</active>
        <label>Customer Account Locked by Zefix (Frozen)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Customer_or_Prospect_Frozen</fullName>
        <active>true</active>
        <label>Customer or Prospect (Frozen)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Partner_Customer_Account</fullName>
        <active>true</active>
        <description>Creates an Account for Partners that are also Customers</description>
        <label>Partner-Customer Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Partner_Customer_Account_Frozen</fullName>
        <active>true</active>
        <label>Partner-Customer Account(Frozen)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Partner_Customer_Account_Locked_by_Zefix</fullName>
        <active>true</active>
        <description>Created by Nexell to lock fields updated by Zefix</description>
        <label>Partner-Customer Account Locked by Zefix</label>
    </recordTypes>
    <recordTypes>
        <fullName>Partner_Customer_Account_Locked_by_Zefix_Frozen</fullName>
        <active>true</active>
        <label>Partner-Customer Account Locked by Zefix (Frozen)</label>
    </recordTypes>
    <recordTypes>
        <fullName>UPC_Customer</fullName>
        <active>true</active>
        <description>Creates a Customer or Prospect Account</description>
        <label>Customer or Prospect</label>
    </recordTypes>
    <recordTypes>
        <fullName>UPC_Customer_Locked</fullName>
        <active>true</active>
        <description>Used to lock fields updated by Zefix</description>
        <label>Customer Account Locked by Zefix</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>NX_Account_Fax_Format</fullName>
        <active>true</active>
        <description>Used to control fax format.</description>
        <errorConditionFormula>AND( 
NOT(ISBLANK(Fax)),
OR( 
    AND( 
        NOT(BEGINS(Fax,&quot;+&quot;)), 
        NOT(BEGINS(Fax,&quot;0&quot;))), 
        (NOT (REGEX( Fax, &quot;[&lt;|&gt;]?[0-9,+, ]+&quot;)))
))</errorConditionFormula>
        <errorDisplayField>Fax</errorDisplayField>
        <errorMessage>Fax numbers must start with + or 0 and must contain only spaces and numbers.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NX_Account_Mobile_Phone_Format</fullName>
        <active>true</active>
        <description>Used to control mobile phone format.</description>
        <errorConditionFormula>AND( 
NOT(ISBLANK(UPC_Mobile__c)),
OR( 
    AND( 
        NOT(BEGINS(UPC_Mobile__c,&quot;+&quot;)), 
        NOT(BEGINS(UPC_Mobile__c,&quot;0&quot;))), 
        (NOT (REGEX( UPC_Mobile__c, &quot;[&lt;|&gt;]?[0-9,+, ]+&quot;)))
))</errorConditionFormula>
        <errorDisplayField>UPC_Mobile__c</errorDisplayField>
        <errorMessage>Phone numbers must start with + or 0 and must contain only spaces and numbers.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NX_Account_Name_Not_Editable</fullName>
        <active>true</active>
        <description>Partners cant change account name of a partner account.</description>
        <errorConditionFormula>AND(
ISCHANGED( Name ),
CONTAINS(RecordType.Name, &quot;Partner&quot;),
CONTAINS($Profile.Name,&quot;Partner&quot;)
)</errorConditionFormula>
        <errorMessage>Partners can&apos;t change the Account Name. Please send a request to your Partner Admin.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NX_Account_Name_Readonly_Zefix</fullName>
        <active>true</active>
        <description>Created by Nexell to make Account Name read only when the Account is updated by Zefix</description>
        <errorConditionFormula>AND(
NOT(UPC_Zefix_Check_Context__c),
NOT(ISNULL(UPC_Last_Zefix_Update__c )),
NOT(UPC_Zefix_Not_Found__c),
$Profile.Name &lt;&gt; &apos;System Administrator&apos;,
ISCHANGED(Name) )</errorConditionFormula>
        <errorDisplayField>UPC_CompanyAdditionalName__c</errorDisplayField>
        <errorMessage>Account name is locked when is checked by Zefix.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NX_Account_Phone_Format</fullName>
        <active>true</active>
        <description>Used to control phone format.</description>
        <errorConditionFormula>AND( 
NOT(ISBLANK(Phone)),
OR( 
    AND( 
        NOT(BEGINS(Phone,&quot;+&quot;)), 
        NOT(BEGINS(Phone,&quot;0&quot;))), 
        (NOT (REGEX( Phone, &quot;[&lt;|&gt;]?[0-9,+, ]+&quot;)))
))</errorConditionFormula>
        <errorDisplayField>Phone</errorDisplayField>
        <errorMessage>Phone numbers must start with + or 0 and must contain only spaces and numbers.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NX_Account_Swiss_Fax_Length</fullName>
        <active>true</active>
        <description>Used to Control Swiss fax Length.</description>
        <errorConditionFormula>IF( 
!REGEX(SUBSTITUTE(SUBSTITUTE(IF(AND(LEFT(Fax,1)=&quot;0&quot;,LEFT(SUBSTITUTE(Fax,&quot; &quot;,&quot;&quot;),2)&lt;&gt;&quot;00&quot;),&quot;0041&quot;&amp;RIGHT(Fax,LEN(Fax)-1),Fax),&quot; &quot;,&quot;&quot;),&quot;+&quot;,&quot;00&quot;),&quot;^0041.*&quot;), 
FALSE, 
NOT( 
AND( 
NOT(AND( 
REGEX(SUBSTITUTE(SUBSTITUTE(IF(AND(LEFT(Fax,1)=&quot;0&quot;,LEFT(SUBSTITUTE(Fax,&quot; &quot;,&quot;&quot;),2)&lt;&gt;&quot;00&quot;),&quot;0041&quot;&amp;RIGHT(Fax,LEN(Fax)-1),Fax),&quot; &quot;,&quot;&quot;),&quot;+&quot;,&quot;00&quot;),&quot;^00417.*&quot;), 
!REGEX(SUBSTITUTE(SUBSTITUTE(IF(AND(LEFT(Fax,1)=&quot;0&quot;,LEFT(SUBSTITUTE(Fax,&quot; &quot;,&quot;&quot;),2)&lt;&gt;&quot;00&quot;),&quot;0041&quot;&amp;RIGHT(Fax,LEN(Fax)-1),Fax),&quot; &quot;,&quot;&quot;),&quot;+&quot;,&quot;00&quot;),&quot;^004171.*&quot;) 
)) 
, 
OR( 
AND( 
REGEX(SUBSTITUTE(SUBSTITUTE(IF(AND(LEFT(Fax,1)=&quot;0&quot;,LEFT(SUBSTITUTE(Fax,&quot; &quot;,&quot;&quot;),2)&lt;&gt;&quot;00&quot;),&quot;0041&quot;&amp;RIGHT(Fax,LEN(Fax)-1),Fax),&quot; &quot;,&quot;&quot;),&quot;+&quot;,&quot;00&quot;),&quot;^00411.*&quot;), 
LEN(SUBSTITUTE(SUBSTITUTE(IF(AND(LEFT(Fax,1)=&quot;0&quot;,LEFT(SUBSTITUTE(Fax,&quot; &quot;,&quot;&quot;),2)&lt;&gt;&quot;00&quot;),&quot;0041&quot;&amp;RIGHT(Fax,LEN(Fax)-1),Fax),&quot; &quot;,&quot;&quot;),&quot;+&quot;,&quot;00&quot;))&gt;=7, 
LEN(SUBSTITUTE(SUBSTITUTE(IF(AND(LEFT(Fax,1)=&quot;0&quot;,LEFT(SUBSTITUTE(Fax,&quot; &quot;,&quot;&quot;),2)&lt;&gt;&quot;00&quot;),&quot;0041&quot;&amp;RIGHT(Fax,LEN(Fax)-1),Fax),&quot; &quot;,&quot;&quot;),&quot;+&quot;,&quot;00&quot;))&lt;=10 
) 
, 
AND( 
REGEX(SUBSTITUTE(SUBSTITUTE(IF(AND(LEFT(Fax,1)=&quot;0&quot;,LEFT(SUBSTITUTE(Fax,&quot; &quot;,&quot;&quot;),2)&lt;&gt;&quot;00&quot;),&quot;0041&quot;&amp;RIGHT(Fax,LEN(Fax)-1),Fax),&quot; &quot;,&quot;&quot;),&quot;+&quot;,&quot;00&quot;),&quot;^0041860.*&quot;), 
LEN(SUBSTITUTE(SUBSTITUTE(IF(AND(LEFT(Fax,1)=&quot;0&quot;,LEFT(SUBSTITUTE(Fax,&quot; &quot;,&quot;&quot;),2)&lt;&gt;&quot;00&quot;),&quot;0041&quot;&amp;RIGHT(Fax,LEN(Fax)-1),Fax),&quot; &quot;,&quot;&quot;),&quot;+&quot;,&quot;00&quot;))=16 
) 
, 
AND( 
REGEX(SUBSTITUTE(SUBSTITUTE(IF(AND(LEFT(Fax,1)=&quot;0&quot;,LEFT(SUBSTITUTE(Fax,&quot; &quot;,&quot;&quot;),2)&lt;&gt;&quot;00&quot;),&quot;0041&quot;&amp;RIGHT(Fax,LEN(Fax)-1),Fax),&quot; &quot;,&quot;&quot;),&quot;+&quot;,&quot;00&quot;),&quot;^0041869.*&quot;), 
LEN(SUBSTITUTE(SUBSTITUTE(IF(AND(LEFT(Fax,1)=&quot;0&quot;,LEFT(SUBSTITUTE(Fax,&quot; &quot;,&quot;&quot;),2)&lt;&gt;&quot;00&quot;),&quot;0041&quot;&amp;RIGHT(Fax,LEN(Fax)-1),Fax),&quot; &quot;,&quot;&quot;),&quot;+&quot;,&quot;00&quot;))&gt;=10, 
LEN(SUBSTITUTE(SUBSTITUTE(IF(AND(LEFT(Fax,1)=&quot;0&quot;,LEFT(SUBSTITUTE(Fax,&quot; &quot;,&quot;&quot;),2)&lt;&gt;&quot;00&quot;),&quot;0041&quot;&amp;RIGHT(Fax,LEN(Fax)-1),Fax),&quot; &quot;,&quot;&quot;),&quot;+&quot;,&quot;00&quot;))&lt;=17 
) 
, 
AND( 
OR( 
REGEX(SUBSTITUTE(SUBSTITUTE(IF(AND(LEFT(Fax,1)=&quot;0&quot;,LEFT(SUBSTITUTE(Fax,&quot; &quot;,&quot;&quot;),2)&lt;&gt;&quot;00&quot;),&quot;0041&quot;&amp;RIGHT(Fax,LEN(Fax)-1),Fax),&quot; &quot;,&quot;&quot;),&quot;+&quot;,&quot;00&quot;),&quot;^004198.*&quot;), 
REGEX(SUBSTITUTE(SUBSTITUTE(IF(AND(LEFT(Fax,1)=&quot;0&quot;,LEFT(SUBSTITUTE(Fax,&quot; &quot;,&quot;&quot;),2)&lt;&gt;&quot;00&quot;),&quot;0041&quot;&amp;RIGHT(Fax,LEN(Fax)-1),Fax),&quot; &quot;,&quot;&quot;),&quot;+&quot;,&quot;00&quot;),&quot;^004199.*&quot;) 
), 
LEN(SUBSTITUTE(SUBSTITUTE(IF(AND(LEFT(Fax,1)=&quot;0&quot;,LEFT(SUBSTITUTE(Fax,&quot; &quot;,&quot;&quot;),2)&lt;&gt;&quot;00&quot;),&quot;0041&quot;&amp;RIGHT(Fax,LEN(Fax)-1),Fax),&quot; &quot;,&quot;&quot;),&quot;+&quot;,&quot;00&quot;))&gt;=7 
) 
, 
AND( 
REGEX(SUBSTITUTE(SUBSTITUTE(IF(AND(LEFT(Fax,1)=&quot;0&quot;,LEFT(SUBSTITUTE(Fax,&quot; &quot;,&quot;&quot;),2)&lt;&gt;&quot;00&quot;),&quot;0041&quot;&amp;RIGHT(Fax,LEN(Fax)-1),Fax),&quot; &quot;,&quot;&quot;),&quot;+&quot;,&quot;00&quot;),&quot;^(00412|00413|00414|00415|00416|00417|00418|00419).*&quot;), 
!REGEX(SUBSTITUTE(SUBSTITUTE(IF(AND(LEFT(Fax,1)=&quot;0&quot;,LEFT(SUBSTITUTE(Fax,&quot; &quot;,&quot;&quot;),2)&lt;&gt;&quot;00&quot;),&quot;0041&quot;&amp;RIGHT(Fax,LEN(Fax)-1),Fax),&quot; &quot;,&quot;&quot;),&quot;+&quot;,&quot;00&quot;),&quot;^(0041860|0041869).*&quot;), 
!REGEX(SUBSTITUTE(SUBSTITUTE(IF(AND(LEFT(Fax,1)=&quot;0&quot;,LEFT(SUBSTITUTE(Fax,&quot; &quot;,&quot;&quot;),2)&lt;&gt;&quot;00&quot;),&quot;0041&quot;&amp;RIGHT(Fax,LEN(Fax)-1),Fax),&quot; &quot;,&quot;&quot;),&quot;+&quot;,&quot;00&quot;),&quot;^(004198|004199).*&quot;), 
LEN(SUBSTITUTE(SUBSTITUTE(IF(AND(LEFT(Fax,1)=&quot;0&quot;,LEFT(SUBSTITUTE(Fax,&quot; &quot;,&quot;&quot;),2)&lt;&gt;&quot;00&quot;),&quot;0041&quot;&amp;RIGHT(Fax,LEN(Fax)-1),Fax),&quot; &quot;,&quot;&quot;),&quot;+&quot;,&quot;00&quot;))=13 
) 
) 
) 
) 
)</errorConditionFormula>
        <errorDisplayField>Fax</errorDisplayField>
        <errorMessage>Phone: invalid length or wrong number type. Normal phone number length is 9 digits with area code but without the leading 0. Exceptions are: 01 (3 to 6 digit), 0860 (12 digit), 0869 (6 to 13 digits). Mobile numbers are not allowed in phone field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NX_Account_Swiss_Mobile_Length</fullName>
        <active>true</active>
        <errorConditionFormula>IF( 
    !REGEX(SUBSTITUTE(SUBSTITUTE(IF(AND(LEFT(UPC_Mobile__c ,1)=&quot;0&quot;,LEFT(SUBSTITUTE(UPC_Mobile__c ,&quot; &quot;,&quot;&quot;),2)&lt;&gt;&quot;00&quot;),&quot;0041&quot;&amp;RIGHT(UPC_Mobile__c ,LEN(UPC_Mobile__c )-1),UPC_Mobile__c ),&quot; &quot;,&quot;&quot;),&quot;+&quot;,&quot;00&quot;),&quot;^0041.*&quot;), 
FALSE, 
NOT( 
AND( 
REGEX(SUBSTITUTE(SUBSTITUTE(IF(AND(LEFT(UPC_Mobile__c,1)=&quot;0&quot;,LEFT(SUBSTITUTE(UPC_Mobile__c,&quot; &quot;,&quot;&quot;),2)&lt;&gt;&quot;00&quot;),&quot;0041&quot;&amp;RIGHT(UPC_Mobile__c,LEN(UPC_Mobile__c)-1),UPC_Mobile__c),&quot; &quot;,&quot;&quot;),&quot;+&quot;,&quot;00&quot;),&quot;^00417.*&quot;), 
!REGEX(SUBSTITUTE(SUBSTITUTE(IF(AND(LEFT(UPC_Mobile__c,1)=&quot;0&quot;,LEFT(SUBSTITUTE(UPC_Mobile__c,&quot; &quot;,&quot;&quot;),2)&lt;&gt;&quot;00&quot;),&quot;0041&quot;&amp;RIGHT(UPC_Mobile__c,LEN(UPC_Mobile__c)-1),UPC_Mobile__c),&quot; &quot;,&quot;&quot;),&quot;+&quot;,&quot;00&quot;),&quot;^004171.*&quot;), 
(LEN(SUBSTITUTE(SUBSTITUTE(IF(AND(LEFT(UPC_Mobile__c ,1)=&quot;0&quot;,LEFT(SUBSTITUTE(UPC_Mobile__c ,&quot; &quot;,&quot;&quot;),2)&lt;&gt;&quot;00&quot;),&quot;0041&quot;&amp;RIGHT(UPC_Mobile__c ,LEN(UPC_Mobile__c )-1),UPC_Mobile__c ),&quot; &quot;,&quot;&quot;),&quot;+&quot;,&quot;00&quot;))=13) 
)))</errorConditionFormula>
        <errorDisplayField>UPC_Mobile__c</errorDisplayField>
        <errorMessage>Mobile Phone: invalid length or wrong number type. Mobile phone number length is 9 digits with area code but without the leading 0. Only mobile numbers are allowed in this field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NX_Account_Swiss_Phone_Length</fullName>
        <active>true</active>
        <description>Used to Control Swiss Phone Length</description>
        <errorConditionFormula>IF( 
!REGEX(SUBSTITUTE(SUBSTITUTE(IF(AND(LEFT(Phone,1)=&quot;0&quot;,LEFT(SUBSTITUTE(Phone,&quot; &quot;,&quot;&quot;),2)&lt;&gt;&quot;00&quot;),&quot;0041&quot;&amp;RIGHT(Phone,LEN(Phone)-1),Phone),&quot; &quot;,&quot;&quot;),&quot;+&quot;,&quot;00&quot;),&quot;^0041.*&quot;), 
FALSE, 
NOT( 
AND( 
OR( 
AND( 
REGEX(SUBSTITUTE(SUBSTITUTE(IF(AND(LEFT(Phone,1)=&quot;0&quot;,LEFT(SUBSTITUTE(Phone,&quot; &quot;,&quot;&quot;),2)&lt;&gt;&quot;00&quot;),&quot;0041&quot;&amp;RIGHT(Phone,LEN(Phone)-1),Phone),&quot; &quot;,&quot;&quot;),&quot;+&quot;,&quot;00&quot;),&quot;^00411.*&quot;), 
LEN(SUBSTITUTE(SUBSTITUTE(IF(AND(LEFT(Phone,1)=&quot;0&quot;,LEFT(SUBSTITUTE(Phone,&quot; &quot;,&quot;&quot;),2)&lt;&gt;&quot;00&quot;),&quot;0041&quot;&amp;RIGHT(Phone,LEN(Phone)-1),Phone),&quot; &quot;,&quot;&quot;),&quot;+&quot;,&quot;00&quot;))&gt;=7, 
LEN(SUBSTITUTE(SUBSTITUTE(IF(AND(LEFT(Phone,1)=&quot;0&quot;,LEFT(SUBSTITUTE(Phone,&quot; &quot;,&quot;&quot;),2)&lt;&gt;&quot;00&quot;),&quot;0041&quot;&amp;RIGHT(Phone,LEN(Phone)-1),Phone),&quot; &quot;,&quot;&quot;),&quot;+&quot;,&quot;00&quot;))&lt;=10 
) 
, 
AND( 
REGEX(SUBSTITUTE(SUBSTITUTE(IF(AND(LEFT(Phone,1)=&quot;0&quot;,LEFT(SUBSTITUTE(Phone,&quot; &quot;,&quot;&quot;),2)&lt;&gt;&quot;00&quot;),&quot;0041&quot;&amp;RIGHT(Phone,LEN(Phone)-1),Phone),&quot; &quot;,&quot;&quot;),&quot;+&quot;,&quot;00&quot;),&quot;^0041860.*&quot;), 
LEN(SUBSTITUTE(SUBSTITUTE(IF(AND(LEFT(Phone,1)=&quot;0&quot;,LEFT(SUBSTITUTE(Phone,&quot; &quot;,&quot;&quot;),2)&lt;&gt;&quot;00&quot;),&quot;0041&quot;&amp;RIGHT(Phone,LEN(Phone)-1),Phone),&quot; &quot;,&quot;&quot;),&quot;+&quot;,&quot;00&quot;))=16 
) 
, 
AND( 
REGEX(SUBSTITUTE(SUBSTITUTE(IF(AND(LEFT(Phone,1)=&quot;0&quot;,LEFT(SUBSTITUTE(Phone,&quot; &quot;,&quot;&quot;),2)&lt;&gt;&quot;00&quot;),&quot;0041&quot;&amp;RIGHT(Phone,LEN(Phone)-1),Phone),&quot; &quot;,&quot;&quot;),&quot;+&quot;,&quot;00&quot;),&quot;^0041869.*&quot;), 
LEN(SUBSTITUTE(SUBSTITUTE(IF(AND(LEFT(Phone,1)=&quot;0&quot;,LEFT(SUBSTITUTE(Phone,&quot; &quot;,&quot;&quot;),2)&lt;&gt;&quot;00&quot;),&quot;0041&quot;&amp;RIGHT(Phone,LEN(Phone)-1),Phone),&quot; &quot;,&quot;&quot;),&quot;+&quot;,&quot;00&quot;))&gt;=10, 
LEN(SUBSTITUTE(SUBSTITUTE(IF(AND(LEFT(Phone,1)=&quot;0&quot;,LEFT(SUBSTITUTE(Phone,&quot; &quot;,&quot;&quot;),2)&lt;&gt;&quot;00&quot;),&quot;0041&quot;&amp;RIGHT(Phone,LEN(Phone)-1),Phone),&quot; &quot;,&quot;&quot;),&quot;+&quot;,&quot;00&quot;))&lt;=17 
) 
, 
AND( 
OR( 
REGEX(SUBSTITUTE(SUBSTITUTE(IF(AND(LEFT(Phone,1)=&quot;0&quot;,LEFT(SUBSTITUTE(Phone,&quot; &quot;,&quot;&quot;),2)&lt;&gt;&quot;00&quot;),&quot;0041&quot;&amp;RIGHT(Phone,LEN(Phone)-1),Phone),&quot; &quot;,&quot;&quot;),&quot;+&quot;,&quot;00&quot;),&quot;^004198.*&quot;), 
REGEX(SUBSTITUTE(SUBSTITUTE(IF(AND(LEFT(Phone,1)=&quot;0&quot;,LEFT(SUBSTITUTE(Phone,&quot; &quot;,&quot;&quot;),2)&lt;&gt;&quot;00&quot;),&quot;0041&quot;&amp;RIGHT(Phone,LEN(Phone)-1),Phone),&quot; &quot;,&quot;&quot;),&quot;+&quot;,&quot;00&quot;),&quot;^004199.*&quot;) 
), 
LEN(SUBSTITUTE(SUBSTITUTE(IF(AND(LEFT(Phone,1)=&quot;0&quot;,LEFT(SUBSTITUTE(Phone,&quot; &quot;,&quot;&quot;),2)&lt;&gt;&quot;00&quot;),&quot;0041&quot;&amp;RIGHT(Phone,LEN(Phone)-1),Phone),&quot; &quot;,&quot;&quot;),&quot;+&quot;,&quot;00&quot;))&gt;=7 
) 
, 
AND( 
REGEX(SUBSTITUTE(SUBSTITUTE(IF(AND(LEFT(Phone,1)=&quot;0&quot;,LEFT(SUBSTITUTE(Phone,&quot; &quot;,&quot;&quot;),2)&lt;&gt;&quot;00&quot;),&quot;0041&quot;&amp;RIGHT(Phone,LEN(Phone)-1),Phone),&quot; &quot;,&quot;&quot;),&quot;+&quot;,&quot;00&quot;),&quot;^(00412|00413|00414|00415|00416|00417|00418|00419).*&quot;), 
!REGEX(SUBSTITUTE(SUBSTITUTE(IF(AND(LEFT(Phone,1)=&quot;0&quot;,LEFT(SUBSTITUTE(Phone,&quot; &quot;,&quot;&quot;),2)&lt;&gt;&quot;00&quot;),&quot;0041&quot;&amp;RIGHT(Phone,LEN(Phone)-1),Phone),&quot; &quot;,&quot;&quot;),&quot;+&quot;,&quot;00&quot;),&quot;^(0041860|0041869).*&quot;), 
!REGEX(SUBSTITUTE(SUBSTITUTE(IF(AND(LEFT(Phone,1)=&quot;0&quot;,LEFT(SUBSTITUTE(Phone,&quot; &quot;,&quot;&quot;),2)&lt;&gt;&quot;00&quot;),&quot;0041&quot;&amp;RIGHT(Phone,LEN(Phone)-1),Phone),&quot; &quot;,&quot;&quot;),&quot;+&quot;,&quot;00&quot;),&quot;^(004198|004199).*&quot;), 
LEN(SUBSTITUTE(SUBSTITUTE(IF(AND(LEFT(Phone,1)=&quot;0&quot;,LEFT(SUBSTITUTE(Phone,&quot; &quot;,&quot;&quot;),2)&lt;&gt;&quot;00&quot;),&quot;0041&quot;&amp;RIGHT(Phone,LEN(Phone)-1),Phone),&quot; &quot;,&quot;&quot;),&quot;+&quot;,&quot;00&quot;))=13 
) 
) 
) 
) 
)</errorConditionFormula>
        <errorDisplayField>Phone</errorDisplayField>
        <errorMessage>Phone: invalid length or wrong number type. Normal phone number length is 9 digits with area code but without the leading 0. Exceptions are: 01 (3 to 6 digit), 0860 (12 digit), 0869 (6 to 13 digits). Mobile numbers are allowed in phone field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NX_Account_Type_Validation</fullName>
        <active>true</active>
        <description>Account type can&apos;t be Prospect and Customer at the same time.</description>
        <errorConditionFormula>AND(
INCLUDES( UPC_Type__c , &apos;Customer&apos;),
INCLUDES( UPC_Type__c , &apos;Prospect&apos;)
)</errorConditionFormula>
        <errorDisplayField>UPC_Type__c</errorDisplayField>
        <errorMessage>Please select Customer or Prospect.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NX_Account_not_Editable</fullName>
        <active>true</active>
        <description>Rule to Lock the Account Fields on All the Record Types</description>
        <errorConditionFormula>AND( 
OR(RecordType.Name =&quot;Customer Account Locked by Zefix (Frozen)&quot;, 
RecordType.Name=&quot;Customer or Prospect (Frozen)&quot;, 
RecordType.Name=&quot;Partner-Customer Account Locked by Zefix (Frozen)&quot;, 
RecordType.Name=&quot;Partner-Customer Account(Frozen)&quot;), 

OR(ISCHANGED(Name), 
ISCHANGED(CurrencyIsoCode)) 

)</errorConditionFormula>
        <errorMessage>These Fields are Read Only, Please refrain from Editing</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NX_UID_Format_validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
NOT(ISBLANK(UPC_UID__c)),
IF(UPPER(LEFT(UPC_UID__c,2))=&quot;CH&quot;,NOT(REGEX(UPC_UID__c ,&quot;CHE-[0-9]{3}.[0-9]{3}.[0-9]{3}&quot;)),FALSE)
)</errorConditionFormula>
        <errorDisplayField>UPC_UID__c</errorDisplayField>
        <errorMessage>Invalid UID format. Use correct format (Switzerland: CHE-123.456.789)</errorMessage>
    </validationRules>
</CustomObject>